# paypay.py

./: LICENSE  README.md  pyproject.toml
examples/: login.py
paypaypy/: __init__.py  main.py
paypaypy/solver/: crypto.py  solver.py
